added logout and updated ui

--- a/src/CSS/addproduct.css
+++ b/src/CSS/addproduct.css
@@ -256,7 +256,7 @@ select{
 
 .add-sell button {
     background-color: #53CA12;
-    color: black;
+    color: #fff;
     width: 100px;
     border-radius: 10px;
     font-weight: bold;
@@ -264,6 +264,8 @@ select{
     border: none;
     outline: none;
     align-self: flex-end;
+    border: 2px solid var(--button-color);
+    font-size: medium;
 }
 .add-sell h2{
   margin-bottom: 30px;
@@ -276,46 +278,28 @@ select{
   font-size: 40px;
   font-weight: bolder;
 }
-.popup {
-  display: none;
-  position: fixed;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 1px solid #000;
-  background-color: rgba(128, 128, 128, 0.5);; /* Update the background color to transparent */
-  z-index: 9999; /* Update the z-index to be higher than other content */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Optional: Add a shadow for visual effect */
-}
-
-.popup-content {
-  padding: 20px;
-  position: relative; /* Ensure the content is positioned relative to the popup */
-  background-color: #fff; /* Add a background color to the popup content */
-}
-
 .close {
   position: absolute;
   top: 10px;
   right: 10px;
   cursor: pointer;
 }
-
-.popup-item h1 {
-  margin-bottom: 30px;
-}
-
-.popup-item input {
-  display: block;
-  padding-left: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  height: 40px;
-  width: 200px;
-}
 .select-wrapper{
   margin-top: -40px;
 }
 .label-property{
   margin-top: 20px;
+}
+.add-property{
+  margin-left: 15px;
+  background-color: #86cfe8;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 7px;
+  padding-bottom: 6px;
+  text-decoration: none;
+  border-radius: 15px;
+  color: #fff;
+  margin-bottom: 8px;
+
 }
