--- a/src/CSS/addsupplier.css
+++ b/src/CSS/addsupplier.css
@@ -247,7 +247,7 @@ header a {
 
 .add-sell button {
     background-color: #53CA12;
-    color: black;
+    color: #fff;
     width: 100px;
     border-radius: 10px;
     font-weight: bold;
@@ -255,6 +255,8 @@ header a {
     border: none;
     outline: none;
     align-self: flex-end;
+    border: 2px solid var(--button-color);
+    font-size: medium;
 }
 .add-sell h2{
   margin-bottom: 30px;
